# mssql-scripter

./: .bumpversion.cfg  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  adventureworks2014_baseline_log.txt  appveyor.yml  build.py  build.sh  dev_mssqltoolsservicesetup.py  dev_requirements.txt  dev_setup.py  dev_sqltoolsservicesetup.py  dos2unix.py  mssql-scripter  mssql-scripter.bat  mssql-scripter.pyproj  mssql-scripter.sln  register_upload.py  requirements.txt  run_all_tests.bat  run_all_tests.py  run_all_tests.sh  setup.cfg  setup.py  sql-xplat-cli.pyproj  sql-xplat-cli.sln  sqltoolsservicesetup.py  tox.ini  utility.py  verify_packaging.py
doc/: Carbon Installation and Usage Guide.docx  README.md  architecture_guide.md  configuring_your_machine.md  development_guide.md  development_setup.md  documentation_page.md  installation_guide.md  notes  pypi_release_steps.md  sequence_diagram.puml  testing_local_install.md  usage_guide.md  virtual_environment_info.md
docker/: Dockerfile
mssql-scripter/: AdventureWorks.sql  LICENSE.txt  mssql-scripter  mssql-scripter.bat  nativesetup.py  setup.py  sqltoolsservicesetup.py
mssqlscripter/: README.md  __init__.py  __main__.py  argparser.py  main.py  parser.py  poop.sql  scriptercallbacks.py  scripterlogging.py  sqltoolsclient.py  temp.sql  temp.txt  temp2.sql  temp3.sql  utility.py
mssqltoolsservice/: LICENSE.txt  MANIFEST.in  README.md  README.rst  buildwheels.py  setup.cfg  setup.py
nativesqltoolsservice/: MANIFEST.in  README.txt  buildallwheels.py  setup.py
(+89 files in other folders)
